--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,48 +1,18 @@
 @import 'reset'
-
-$deepBlue: #032f3e
-$offWhite: #f8f9fb
-$sectionHeading: 24px
-$bannerHeading: 46px
-
-@mixin banner
-  width: 100%
-  position: relative
-  color: white
-
-  .banner-content
-    position: absolute
-    top: 50px
-    width: 100%
-
-  img
-    width: 100%
-
-  span
-    font-size: $bannerHeading
-    display: block
-    text-transform: uppercase
-    font-weight: bold
-
-    &.title
-      font-weight: normal
-      margin-bottom: 30px  
+@import 'variables'
+@import 'mixins'
 
 #main-nav
   background: $deepBlue
-
   ul
     width: 100%
-
     &:after
       content: ""
       display: block
       clear: both
-
   li
     float: left
     width: 14%
-
   a
     color: $offWhite
     text-decoration: none
@@ -60,7 +30,6 @@ section h1
 
 .lessons-banner
   @include banner
-
   li
     text-transform: uppercase
     font-size: 20px
