--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,23 +6,24 @@
   background: $deepBlue
   ul
     width: 100%
-    &:after
-      content: ""
-      display: block
-      clear: both
+    @include clearfix
+      
   li
     float: left
-    width: 14%
+    width: (100% / 6)
   a
     color: $offWhite
     text-decoration: none
     padding: 16px
     display: block
     text-align: center
+    &:hover
+      background: #333
   
-section h1
-  font-size: $sectionHeading
-  color: $deepBlue
+section
+  h1
+    font-size: $sectionHeading
+    color: $deepBlue
 
 .lead-banner
   @include banner
@@ -35,3 +36,22 @@ section h1
     font-size: 20px
     min-width: 500px
     margin: 60px 0
+
+#services
+  margin-bottom: 60px
+  li
+    float: left
+    box-sizing: border-box
+    text-align: center
+    width: (100% / 3)
+  img
+    width: 60%
+    margin: 20px 20%
+  a
+    text-decoration: none
+    color: $deepBlue
+    font-weight: bold
+    &:hover
+      color: red
+  ul
+    @include clearfix
