--- a/src/sass/mixins.sass
+++ b/src/sass/mixins.sass
@@ -16,3 +16,9 @@
     &.title
       font-weight: normal
       margin-bottom: 30px
+
+@mixin clearfix
+  &:after
+    content: ""
+    display: block
+    clear: both
