Last lesson passed:3

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -11,6 +11,8 @@
   li
     float: left
     width: (100% / 6)
+    @include mQ(600px)
+      width: 100%
   a
     color: $offWhite
     text-decoration: none
