--- a/src/sass/mixins.sass
+++ b/src/sass/mixins.sass
@@ -13,6 +13,8 @@
     display: block
     text-transform: uppercase
     font-weight: bold
+    @include mQ(3000px, 1200px)
+      font-size: 68px
     &.title
       font-weight: normal
       margin-bottom: 30px
@@ -30,3 +32,11 @@
   width: ((100% - (($cols - 1) * $mgn)) / $cols)
   &:nth-child(#{$cols}n)
     margin-right: 0
+
+@mixin mQ($arg...)
+  @if length($arg) == 1
+    @media screen and (max-width: nth($arg, 1))
+      @content
+  @if length($arg) == 2
+    @media screen and (max-width: nth($arg, 1)) and (min-width: nth($arg, 2))
+      @content
